--- a/experienceheader.html
+++ b/experienceheader.html
@@ -622,7 +622,7 @@
                  Twitter
                  <br/>
                  <br/>
-                 <img src="twitter.png" alt="" width="50" height="50">                
+                 <img src="twitter2.png" alt="" width="50" height="50">                
                  <br/>                  
                  <br/> 
                  
